# susi_viral

./: .gitignore  AGENTS.md  DEPLOYMENT.md  package.json  vercel.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: __init__.py  briefs.py  collections.py  library.py  reports.py  search.py  similarity.py  workspaces.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  base.py  bootstrap.py  dependencies.py  runtime.py
backend/app/db/migrations/: README.md
backend/app/db/models/: __init__.py  collection.py  collection_item.py  content_brief.py  content_dna.py  embedding_job.py  library_item.py  monitor_target.py  pattern_tag.py  raw_clip.py  report_delivery.py  scheduled_report.py  search_query.py  user.py  workspace.py  workspace_membership.py
backend/app/schemas/: __init__.py  brief.py  collection.py  content_dna.py  library.py  report.py  search.py  similarity.py  workspace.py
backend/app/services/: __init__.py  identity.py  library_search.py  library_service.py  search_service.py  shared.py  similarity_search.py
backend/app/tasks/: __init__.py  briefs.py  celery_app.py  embeddings.py  reports.py
backend/tests/: conftest.py  test_collections_api.py  test_connectors.py  test_content_briefs.py  test_extraction.py  test_library_api.py  test_library_search.py  test_partial_failure.py  test_ranking.py  test_report_pipeline.py  test_reports_api.py  test_search_api.py  test_similarity_search.py  test_workspaces.py
frontend/: eslint.config.mjs  (+6 more)
(+81 files in other folders)
